Stage 3: Polymorphic feedback system created"

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,6 +41,9 @@
       <li>
         <%= link_to "Фильмы", movies_path, class: current_page?(movies_path) ? "active" : "" %>
       </li>
+      <li>
+        <%= link_to "Все отзывы", reviews_path, class: current_page?(reviews_path) ? "active" : "" %>
+      </li>
     </ul>
   </div>
 </nav>
