--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,7 +36,7 @@
         <%= link_to "Главная", root_path, class: current_page?(root_path) ? "active" : "" %>
       </li>
       <li>
-        <%= link_to "Книги", books_path, class: current_page?(books_path) ? "active" : "" %>
+        <%= link_to "Книги", " ", class: current_page?( ) ? "active" : "" %>
       </li>
       <li>
         <%= link_to "Фильмы", movies_path, class: current_page?(movies_path) ? "active" : "" %>
