--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
           <i class="bi bi-book display-4 text-primary mb-3"></i>
           <h3 class="card-title">Книги</h3>
           <p class="card-text">Читайте и пишите отзывы на ваши любимые книги</p>
-          <%= link_to 'Перейти к книгам', books_path, class: 'btn btn-primary' %>
+          <%= link_to 'Перейти к книгам', " ", class: 'btn btn-primary' %>
         </div>
       </div>
     </div>
@@ -87,7 +87,7 @@
       <h4 class="alert-heading">Пока нет отзывов</h4>
       <p>Будьте первым, кто оставит отзыв!</p>
       <div class="mt-2">
-        <%= link_to 'Посмотреть книги', books_path, class: 'btn btn-sm btn-primary me-2' %>
+        <%= link_to 'Посмотреть книги', " ", class: 'btn btn-sm btn-primary me-2' %>
         <%= link_to 'Посмотреть фильмы', movies_path, class: 'btn btn-sm btn-primary' %>
       </div>
     </div>
