--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,11 +1,7 @@
-<% content_for :title, "New book" %>
-
-<h1>New book</h1>
-
+<% content_for :title, "Новая книга" %>
+<h1>Новая книга</h1>
 <%= render "form", book: @book %>
-
 <br>
-
 <div>
-  <%= link_to "Back to books", books_path %>
+  <%= link_to "Назад к книгам", books_path %>
 </div>
