--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,12 +1,8 @@
-<% content_for :title, "Editing movie" %>
-
-<h1>Editing movie</h1>
-
+<% content_for :title, "Изменить фильм" %>
+<h1>Изменить фильм</h1>
 <%= render "form", movie: @movie %>
-
 <br>
-
 <div>
-  <%= link_to "Show this movie", @movie %> |
-  <%= link_to "Back to movies", movies_path %>
+  <%= link_to "Показать фильм", @movie %> |
+  <%= link_to "Назад к фильмам", movies_path %>
 </div>
